--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     //Dagger hilt
     implementation 'com.google.dagger:hilt-android:2.49'
     kapt 'com.google.dagger:hilt-compiler:2.49'
+
+    //Navigation
+    implementation 'androidx.navigation:navigation-compose:2.7.7'
 }
