--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,9 @@ dependencies {
 
     //Dagger hilt
     implementation 'com.google.dagger:hilt-android:2.49'
-    kapt 'com.google.dagger:hilt-compiler:2.49'
+    kapt'com.google.dagger:hilt-android-compiler:2.49'
+    kapt 'androidx.hilt:hilt-compiler:1.2.0'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
 
     //Navigation
     implementation 'androidx.navigation:navigation-compose:2.7.7'
